feito transição da navbar, falta corrigir o bug do overflow

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -31,9 +31,13 @@
   transition: all 0.9s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
-#depois {
+.backdrop-blur {
+  box-shadow: #1cb81c3d;
+  background-color: rgba(3, 4, 18, 0.5);
   backdrop-filter: blur(48px);
+  overflow-x: auto;
 }
+
 
 .theme-dark {
   #antes {
